# git-write

./: .coverage  .env.example  .gitignore  API_FIXES_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Implementation_Plan.md  Jules_Commands.md  MEMORY_BANK_UPDATE_SAVE_ENDPOINT.md  Memory_Bank.md  README.md  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  repomix-output.xml  test_fixed_endpoints.py  test_integration.py  writegit-project-doc.md
.github/workflows/: test.yml
.qoder/quests/: project-docs.md
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  USER_GUIDE.md
gitwrite-web/: Dockerfile.dev  Dockerfile.prod  nginx.conf  package-lock.json  package.json  tsconfig.app.json
gitwrite-web/gitwrite-web/: package-lock.json
gitwrite-web/src/: App.tsx  main.tsx
gitwrite-web/src/components/: AnnotationSidebar.tsx  CommitHistoryView.tsx  Dashboard.tsx  FileContentViewer.tsx  Login.tsx  ProjectList.tsx  RepositoryBrowser.tsx  RepositoryStatus.tsx  ThemeToggle.tsx  WordDiffDisplay.tsx  theme-provider.tsx
gitwrite-web/src/pages/: BranchManagementPage.tsx  BranchReviewPage.tsx  FileContentViewerPage.tsx  WordDiffViewerPage.tsx
gitwrite_api/: .placeholder  __init__.py  main.py  models.py  security.py
gitwrite_api/routers/: annotations.py  auth.py  repository.py  uploads.py
gitwrite_cli/: .coverage  README.md  __init__.py  coverage.xml  main.py  pyproject.toml
gitwrite_core/: annotations.py  branching.py  exceptions.py  export.py  repository.py  tagging.py  versioning.py
gitwrite_sdk/: jest.config.js  package-lock.json  package.json  repomix-output.xml  rollup.config.js  rollup.config.mjs  tsconfig.json
gitwrite_sdk/gitwrite_sdk/: package-lock.json
gitwrite_sdk/src/: apiClient.ts  index.ts  types.ts
gitwrite_sdk/tests/: apiClient.test.ts
tests/: check_pygit2_import.py  conftest.py  test_api_annotations.py  test_api_auth.py  test_api_cherry_pick.py  test_api_export.py  test_api_repository.py  test_api_uploads.py  test_cli_explore_switch.py  test_cli_export.py  test_cli_history_compare.py  test_cli_init_ignore.py  test_cli_review_cherry_pick.py  test_cli_save_revert.py  test_cli_sync_merge.py  test_cli_tag.py  test_core_annotations.py  test_core_branching.py  test_core_export.py  test_core_repository.py  test_core_versioning.py  test_main.py  test_tag_command.py
wiki/: README.md
wiki/backend-api/: README.md  annotations.md  authentication.md  file-uploads.md  repository-operations.md
wiki/cli-tool/: README.md  command-reference.md
wiki/cli-tools/: common-workflows.md  configuration-management.md  extending-cli.md
wiki/core-architecture/: README.md  adapter-pattern.md  api-gateway.md  cross-cutting-concerns.md  facade-pattern.md  layered-architecture.md  technology-tradeoffs.md
wiki/core-engine/: README.md  annotation-system.md  branching-system.md  error-handling.md  export-functionality.md  repository-management.md  tagging-system.md  versioning-system.md
wiki/deployment-config/: backup-recovery.md  configuration-management.md  development-setup.md  production-deployment.md  scaling-performance.md
wiki/frontend-app/: README.md  api-integration.md  component-architecture.md  routing-navigation.md  state-management.md  word-diff-visualization.md
wiki/system-overview/: README.md  getting-started.md  key-features.md  technology-stack.md  user-workflows.md
wiki/testing-strategy/: README.md  api-testing.md  cli-testing.md  core-module-testing.md  test-infrastructure.md
wiki/typescript-sdk/: README.md  api-client.md  installation-usage.md  testing-integration.md  type-definitions.md
wiki/user-guides/: beta-reader-integration.md  collaborative-writing.md  editorial-review.md  getting-started.md  troubleshooting.md
