[project]
# Renaming the project to be more general is good practice
name = "gitwrite"
version = "0.1.0"
description = "Git-based version control for writers and writing teams"
authors = [
    {name = "Agent_CLI_Dev", email = "agent@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3,<9.0.0", # Loosened version constraint slightly, but >=8.2.1 is also fine
    "rich>=13.0.0,<15.0.0",
    "pygit2>=1.12.0,<2.0.0" # Loosened version constraint slightly
]

[tool.poetry]
packages = [
    { include = "gitwrite_cli" },
    { include = "gitwrite_core" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
