[project]
# Renaming the project to be more general is good practice
name = "gitwrite"
version = "0.1.0"
description = "Git-based version control for writers and writing teams"
authors = [
    {name = "Agent_CLI_Dev", email = "agent@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
packages = [
    { include = "gitwrite_cli" },
    { include = "gitwrite_core" },
    { include = "gitwrite_api" },
]

[tool.poetry.dependencies]
click = ">=8.1.3,<9.0.0"
rich = ">=13.0.0,<15.0.0"
pygit2 = ">=1.12.0,<2.0.0"
fastapi = "^0.104.1"
httpx = "^0.25.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pypandoc = "^1.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0" # Added pytest-mock

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
